# LittleInterpreter

./: .gitignore  CMakeLists.txt  README.md  test.lox  test2.lox
include/: Environment.hpp  Expr.hpp  Interpreter.hpp  Lox.hpp  LoxClass.hpp  LoxFunction.hpp  LoxInstance.hpp  NativeFunctions.hpp  Parser.hpp  Resolver.hpp  Scanner.hpp  Stmt.hpp  Token.hpp  TypeChecker.hpp  Types.hpp  Visitor.hpp
src/: Environment.cpp  Expr.cpp  Interpreter.cpp  Lox.cpp  LoxClass.cpp  LoxFunction.cpp  LoxInstance.cpp  NativeFunctions.cpp  Parser.cpp  Resolver.cpp  Scanner.cpp  Stmt.cpp  Token.cpp  TypeChecker.cpp  Types.cpp  main.cpp
